# TunePPO

./: .gitignore  Dockerfile  README.md  pyproject.toml  requierements.txt  requirements.txt
configs/: mistral_7b_full.yaml
ppotune/: advantage.py  data.py  datatypes.py  dist.py  log.py  loss.py  model.py  peft.py  reward.py  sample.py  utils.py  volatile.py
ppotune/arbiters/: __init__.py  default_arbiter.py  gsm8k_arbiter.py  pairwise.py  pairwise_arbiter.py  tldr_arbiter.py
ppotune/comm/: __init__.py  mixture.py  primitives.py  protocols.py  weightage.py
ppotune/config/: __init__.py  _instantiate.py
ppotune/data/: collators.py  loaders.py  samplers.py  subsets.py  types.py  utils.py
ppotune/data/sets/: __init__.py  alpaca.py  gsm8k.py  qa.py  text_completion.py  tldr.py
ppotune/datasets/: __init__.py  alpaca.py  alpaca_dataset.py  gsm8k.py  qa.py  text_completion_dataset.py  tldr.py  utils.py
ppotune/evaluation/: __init__.py  eval.py  gsm8k_eval.py
ppotune/models/llama3_1/: __init__.py  _component_builders.py  _model_builders.py
ppotune/schedulers/: __init__.py  constant_scheduler.py  linear_scheduler.py  scheduler.py
ppotune/tokenizers/: __init__.py  hf_tokenizer.py  llama3_tokenizer.py  mistral2_tokenizer.py
receipts/: ppo.py
receipts/fed_ppo/: fed_ppo.py
receipts/fed_ppo/configs/: mistral_7b.yaml
receipts/ppo/: ppo.py
receipts/ppo/configs/: alpaca_llama_3.1_8B_ppo.yaml  alpaca_llama_3.1_8b_ppo.yaml  gsm8k_llama_3.1_8b_grpo.yaml  (+11 more)
receipts/ppo_qlora/: ppo_qlora.py
receipts/shifting_ppo/: shifting_ppo.py
sweeps/: fed-sweep.yml
(+3 files in other folders)
